TestDX/main/default/objects/Account/fields/test_1__c.field-meta.xml
<CustomField>
    <fullName>test_1__c</fullName>
    <label>test 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>