TestDX/main/default/objects/Account/fields/test_3__c.field-meta.xml
<CustomField>
    <fullName>test_3__c</fullName>
    <label>test 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>